syntax = "proto3";

package v2.service.message;

import "proto/entity/widget.proto";

option go_package = "github.com/dtc03012/me/protobuf/proto/service/message";

message CheckDistrictWeatherRequest {
  string district = 1;
}

message CheckDistrictWeatherResponse {
  entity.temperature temperature = 1;
}